app/globals.css
/* ... */
.toggle-button:hover {
  cursor: pointer;
  background-color: #f1f1f1;
  transition: 0.2s ease-in-out;
}

.toggle-description-button {
  display: flex;
  justify-content: space-between;
}

.toggle-description-button:hover {
  cursor: pointer;
}

.delete-guest {
  margin: 0;
  padding: 0 4px;
  color: #f89292;
  border-radius: 4px;
  transition: 0.2s;
}

.delete-guest:hover {
  color: #ef4b4c;
  transition: 0.2s;
}

/*______________________________________ FORM */
pre {
  margin: 4px;
}

b {
  margin: 0 8px 0 0;
}

.form__offerings {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}

.form__offerings-alone {
  display: flex;
  align-items: center;
  margin: 8px 0;
}

.create-event-form {
  display: flex;
  flex-direction: column;
  border-radius: 0.375rem;
}

textarea,
input {
  margin: 0px 8px 0 0;
  border-radius: 0.375rem;
  border: solid #cccccc 0.5px;
  padding-left: 8px;
}

input {
  height: 28px;
}

.rti--container {
  margin-bottom: 8px;
}
.rti--input {
  width: 70% !important;
  height: 22px;
}

.inline-label-input {
  display: flex;
  align-items: center;
  margin-top: 6px;
}

.form__input-120w {
  width: 120px;
  margin-bottom: 8px;
}

.form__section-title {
  text-align: center;
  margin: 32px 0 8px 0;
}

/*______________________________________ CARDS */
.event-card {
  position: relative;
  margin: 8px 16px 32px;
  padding: 8px;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: #eaeaea -2px 4px 4px 4px;
  display: flex;
  flex-direction: column;
  width: 340px;
  min-height: 240px;
}

.my-info-card {
  position: relative;
  margin: 8px 16px 32px;
  padding: 8px;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: #eaeaea -2px 4px 4px 4px;
  display: flex;
  flex-direction: column;
  width: 340px;
  min-height: 320px;
}

.policy-card {
  position: relative;
  margin: 60px auto;
  padding: 8px 16px;
  border-radius: 8px;
  background-color: #fff;
  box-shadow: #eaeaea -2px 4px 4px 4px;
  display: flex;
  flex-direction: column;
  min-width: 340px;
  max-width: 600px;
}

.manage__create-by {
  display: flex;
  flex-direction: column;
  font-size: 12px;
  align-self: center;
  text-align: center;
}

.manage__add-guest {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 8px;
  justify-content: space-between;
}

.add-info__title {
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.manage__form-details {
  display: flex;
  flex-direction: column;
}

.manage__info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__description {
  display: flex;
  flex-direction: column;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__info-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  padding: 0 8px;
  border-radius: 4px;
  margin-bottom: 8px;
}

.manage__info-time-date {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  margin-bottom: 8px;
  padding: 4px 0 4px 40px;
  border-radius: 4px;
  border: 0.6px solid #ccc;
}

.manage__info-time-date-event {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;
  margin-bottom: 8px;
  padding: 4px 20px;
  border-radius: 4px;
  border: 0.6px solid #ccc;
}

/*________________________________ LIST DISPLAY */

.guest-list {
  margin: 4px 16px 8px;
  padding: 4px;
  background-color: #f1f1f1;
  border-radius: 4px;
  height: fit-content;
  opacity: 1;
  transition: 0.2s ease-in-out;
}

.guest-list-inner {
  margin: 4px 0 0 0;
  padding: 4px;
  background-color: #f1f1f1;
  border-radius: 4px;
  height: fit-content;
  opacity: 1;
  transition: 0.2s ease-in-out;
}

.guest-list--hidden {
  line-height: 0px;
  overflow: hidden;
  max-height: 0;
  opacity: 0;
  transition: 0.2s ease-in-out;
}

.list__names {
  padding: 4px 8px;
  font-size: 14px;
  max-height: 320px;
  overflow: auto;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.guest-restrictions {
  display: none;
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 0;
  height: 0;
}

.guest-restrictions--selected {
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 1;
  height: 1;
  display: block;
}

.restriction-alert {
  border-radius: 4px;
  font-weight: bold;
  padding: 2px;
  font-size: 12px;
  color: #f99494;
  transition: 0.2s;
}

.restriction-alert:hover {
  color: #ef4b4c;
  cursor: pointer;
  transition: 0.2s;
}

.restriction-alert-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.answer-invite-buttons {
  display: flex;
  justify-content: center;
  margin: 16px;
}

.description-hidden {
  height: 0;
  overflow: hidden;
  transition: 0.2s ease-in-out;
}
.description-visible {
  min-height: 20px;
  transition: 0.2s ease-in-out;
}

/*______________________________________  */

/*______________________________________ MODS */

.--centered-text {
  text-align: center;
}

.--width60px {
  width: 60px;
}

.--width350px {
  width: 350px;
}

.--gray-shading {
  background-color: #f1f1f1;
  border-bottom: 1px solid #ccc;
}

.--gray-shading-line {
  background-color: #fff;
  border: 1px solid #ccc;
  border-bottom: 2px solid #ccc;
  border-left: 6px solid #ccc;
}

.--grey-text {
  color: #ccc;
  margin: 0;
  line-height: 12px;
}

.--with-margin-t-8px {
  margin-top: 8px;
}

.--with-margin-n-8px {
  margin-bottom: 8px;
}

.--margin-top-32px {
  margin-top: 32px;
}

.--marginB16px {
  margin-top: 32px;
  margin-left: 16px;
  margin-bottom: 16px;
}

.--bold {
  font-weight: bold;
}

.--bold-gray {
  font-weight: bold;
  margin: 0 8px 0 0;
  color: #cccccc;
}
/* ... */

